--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -168,8 +168,18 @@ jobs:
         workload_identity_provider: 'projects/146869023108/locations/global/workloadIdentityPools/github-pool/providers/github-oidc-v2'
         service_account: 'github-ci@github-ci-blanxlait.iam.gserviceaccount.com'
 
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2
+
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
+
+    - name: Debug - Check auth
+      run: |
+        echo "Checking gcloud auth..."
+        gcloud auth list
+        echo "Checking project access..."
+        gcloud projects describe blanxlait-infrastructure --format="value(projectId)"
 
     - name: Deploy to Firebase Hosting
       run: firebase deploy --only hosting --project blanxlait-infrastructure
