--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -183,12 +183,19 @@ jobs:
         gcloud auth list
         echo "Checking project access..."
         gcloud projects describe blanxlait-infrastructure --format="value(projectId)"
+        echo "Getting access token..."
+        gcloud auth print-access-token | head -c 20
+        echo "..."
 
     - name: Deploy to Firebase Hosting
-      run: firebase deploy --only hosting --project blanxlait-infrastructure
+      run: |
+        export FIREBASE_TOKEN=$(gcloud auth print-access-token)
+        firebase deploy --only hosting --project blanxlait-infrastructure
 
     - name: Deploy Firestore Rules
-      run: firebase deploy --only firestore:rules --project blanxlait-infrastructure
+      run: |
+        export FIREBASE_TOKEN=$(gcloud auth print-access-token)
+        firebase deploy --only firestore:rules --project blanxlait-infrastructure
 
     - name: Deployment Success
       run: |
